# SummarAIzeHub

./: .gitignore  README.md  README_en.md  README_ja.md  action.yaml  launch.sh  main.py  pyproject.toml
.github/workflows/: main_workflow.yml
actions/: main_workflow.yml
src/: main.py
src/summarizer/: summarizer.py
templates/: prompt_template.txt
